hphp/hack/test/typecheck/expression_trees/nesting/redundant_name.php.exp
File "redundant_name.php", line 7, characters 21-30:
Nested expression trees must not provide the DSL name (it is inherited from the enclosing tree). (Parsing[1002])
File "redundant_name.php", line 8, characters 22-31:
Nested expression trees must not provide the DSL name (it is inherited from the enclosing tree). (Parsing[1002])
File "redundant_name.php", line 9, characters 21-31:
Nested expression trees must not provide the DSL name (it is inherited from the enclosing tree). (Parsing[1002])
File "redundant_name.php", line 8, characters 20-35:
Invalid argument (Typing[4110])
  File "redundant_name.php", line 8, characters 8-18:
  Expected `ExampleDsl2`
  File "expr_tree.hhi", line 25, characters 15-24:
  But got `ExampleDsl`
File "redundant_name.php", line 8, characters 33-33:
Invalid argument (Typing[4110])
  File "redundant_name.php", line 8, characters 8-18:
  Expected `ExampleDsl2`
  File "expr_tree.hhi", line 25, characters 15-24:
  But got `ExampleDsl`
